more directives and test cases
