# openapi-codegen/sbt-plugin/src/sbt-test/sbt-openapi-codegen/oneOf-json-roundtrip/swagger.yaml
@@ -449,6 +449,70 @@ paths:
                   bar:
                     type: string
                     format: uuid
+    patch:
+      x-tapir-codegen-directives:
+        - force-req-body-eager
+      description: force-req-body-eager applies to req body but not resp
+      requestBody:
+        content:
+          text/csv:
+            schema:
+              type: object
+              required:
+                - foo
+              properties:
+                foo:
+                  type: string
+                bar:
+                  type: string
+                  format: uuid
+      responses:
+        "200":
+          description: An object
+          content:
+            text/csv:
+              schema:
+                type: object
+                required:
+                  - foo
+                properties:
+                  foo:
+                    type: string
+                  bar:
+                    type: string
+                    format: uuid
+    get:
+      x-tapir-codegen-directives:
+        - force-resp-body-eager
+      description: force-resp-body-eager applies to resp body but not req
+      requestBody:
+        content:
+          text/csv:
+            schema:
+              type: object
+              required:
+                - foo
+              properties:
+                foo:
+                  type: string
+                bar:
+                  type: string
+                  format: uuid
+      responses:
+        "200":
+          description: An object
+          content:
+            text/csv:
+              schema:
+                type: object
+                required:
+                  - foo
+                properties:
+                  foo:
+                    type: string
+                  bar:
+                    type: string
+                    format: uuid
   '/force/streaming':
     post:
       x-tapir-codegen-directives:
@@ -523,6 +587,76 @@ paths:
             text/plain:
               schema:
                 type: string
+    patch:
+      x-tapir-codegen-directives:
+        - force-resp-body-streaming
+      description: force-resp-body-streaming applies to resp but not req
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - foo
+              properties:
+                foo:
+                  type: string
+                bar:
+                  type: string
+                  format: uuid
+      responses:
+        "200":
+          description: An object
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - foo
+                properties:
+                  foo:
+                    type: string
+                  bar:
+                    type: string
+                    format: uuid
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ValidatedObj'
+    get:
+      x-tapir-codegen-directives:
+        - force-req-body-streaming
+      description: force-req-body-streaming applies to req but not resp
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - foo
+              properties:
+                foo:
+                  type: string
+                bar:
+                  type: string
+                  format: uuid
+      responses:
+        "200":
+          description: An object
+          content:
+            application/json:
+              schema:
+                type: object
+                required:
+                  - foo
+                properties:
+                  foo:
+                    type: string
+                  bar:
+                    type: string
+                    format: uuid
+            text/plain:
+              schema:
+                $ref: '#/components/schemas/ValidatedObj'
   '/inline/simple/object':
     post:
       requestBody:
